### #46 로그인 css 수정 See: Github issue #46 --------------------------------------- ### 작업내용 * 로그인 팝업 text wordwrap되던 문제 수정

--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -129,16 +129,15 @@
       .inner {
         margin: 0 auto;
         .forgot {
-          width: 149px;
+          width: auto;
           display: inline-block;
           line-height: 22px;
           cursor: pointer;
         }
         .register {
           margin-left: 57px;
-          width: 55px;
+          width: auto;
           display: inline-block;
-          line-height: 22px;
           cursor: pointer;
         }
       }
